Added new collection.

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,11 @@ baseurl: ""
 url: ""
 analytics: ''
 
+# Special content types.
 collections:
   programs:
+    output: true
+  people:
     output: true
 
 # Build settings.
