Added team page.

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ collections:
     permalink: /program/:title/
   people:
     output: true
+  page:
+    output: true
 
 # Build settings.
 exclude:
