Added image val for team.

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,9 +1,12 @@
 - name: Mesfin Getaneh
   position: Co-founder and President
+  image: mesfin-getaneh.jpg
 - name: Lulit Tesfaye
   position: Co-founder and Vice President
+  image: lulit-tesfaye.jpg
 - name: Shimelse Mekonnen
   position: Co-founder and Executive Vice President
+  image: shimeles-mekonnen.jpg
 - name: Henok Tedla
 - name: Tigest Alemu
 - name: Sabel G. Kassa
