Updated past and current team.

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,20 +1,21 @@
 - name: Mesfin Getaneh
-  position: Co-founder and President
+  position: Founder and Chair
   image: mesfin-getaneh.jpg
-- name: Lulit Tesfaye
-  position: Co-founder and Vice President
-  image: lulit-tesfaye.jpg
 - name: Shimelse Mekonnen
-  position: Co-founder and Executive Vice President
+  position: Founder and Executive Vice Chair
   image: shimeles-mekonnen.jpg
+- name: Lulit Tesfaye
+  position: Founder and Vice Chair
+  image: lulit-tesfaye.jpg
 - name: Henok Tedla
-- name: Tigest Alemu
-- name: Sabel G. Kassa
-- name: Anna Jemaneh
-- name: Elbethel Gebrehiwot
-- name: Deresse (Dee) Harris
-- name: Tigest Ruga
-- name: Zewdu Beyen
-- name: Birhanu Abate
+  position: Treasurer and Finance Director
 - name: Yanit Belachew
-- name: Solomon Garedew
+  position: Secretary and Communication Director
+- name: Sinafik Gebru
+  position: Director of Membership Services
+- name: Semret Yibass
+  position: Career Development Program Lead
+- name: Aster Gubay
+  position: Diaspora Community Engagement Program Lead
+- name: Meron Ruga
+  position: Personal and Professional Development Program Lead
