Added diaspora corner page type and nav.

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,9 @@ collections:
     output: true
   page:
     output: true
+  diaspora:
+    output: true
+    permalink: /diaspora-corner/:title/
 
 # About section sub-nav.
 about:
