--- a/_data/team.yml
+++ b/_data/team.yml
@@ -9,13 +9,19 @@
   image: lulit-tesfaye.jpg
 - name: Henok Tedla
   position: Treasurer and Finance Director
+  image: henok-tedla.jpg
 - name: Yanit Belachew
   position: Secretary and Communication Director
+  image: yanit-belachew.jpg
 - name: Sinafik Gebru
   position: Director of Membership Services
+  image: sinafik-gebru.jpg
 - name: Semret Yibass
   position: Career Development Program Lead
+  image: semret-yibass.jpg
 - name: Aster Gubay
   position: Diaspora Community Engagement Program Lead
+  image: aster-gubay.jpg
 - name: Meron Ruga
   position: Personal and Professional Development Program Lead
+  image: meron-ruga.jpg
