--- a/_data/team.yml
+++ b/_data/team.yml
@@ -8,10 +8,12 @@
   position: Founder and Vice Chair
   image: lulit-tesfaye.jpg
 - name: Henok Tedla
-  position: Treasurer and Finance Director
+  position: Treasurer 
+  Finance Director
   image: henok-tedla.jpg
 - name: Yanit Belachew
-  position: Secretary and Communication Director
+  position: Secretary
+  Communication Director
   image: yanit-belachew.jpg
 - name: Sinafik Gebru
   position: Director of Membership Services
