--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3,7 +3,7 @@
   image: mesfin-getaneh.jpg
 - name: Shimelse Mekonnen
   position: Founder and Executive Vice Chair
-  image: shimeles-mekonnen.jpg
+  image: shimelse-mekonnen.jpg
 - name: Lulit Tesfaye
   position: Founder and Vice Chair
   image: lulit-tesfaye.jpg
