--- a/_data/team.yml
+++ b/_data/team.yml
@@ -8,12 +8,10 @@
   position: Founder and Vice Chair
   image: lulit-tesfaye.jpg
 - name: Henok Tedla
-  position: Treasurer 
-  Finance Director
+  position: Treasurer and Finance Director
   image: henok-tedla.jpg
 - name: Yanit Belachew
-  position: Secretary
-  Communication Director
+  position: Secretary and Communication Director
   image: yanit-belachew.jpg
 - name: Sinafik Gebru
   position: Director of Membership Services
