--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -1,8 +1,8 @@
 # These are list of items that are displayed under "Get Involved" on homepage.
-- title: "Diaspora and Community Engagement (DCE)"
+- title: "Share/Find Job Opportunities "
   image: "assets/images/programs/diaspora-engagement.jpg"
   description: "Bringing our community together to support the development of a cohesive network through various activities."
-- title: "Personal and Professional Empowerment"
+- title: "Sharpen Your Skills"
   image: "assets/images/programs/personal-professional-empowerment.jpg"
   description: "Providing the tools and resources that help members develop the confidence and strength to set realistic goals and fulfil their potential."
 - title: "Become a Mentor/Mentee"
