--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings.
-title : YEP
+title : Your Ethiopian Professionals Network (YEP)
 email : henok@blencorp.com
 tagline: A Jekyll starter for YEP theme.
 description: >
