--- a/_data/featured.yml
+++ b/_data/featured.yml
@@ -1,4 +1,4 @@
-- title: "Latest Event: Effective Communication Skills"
+- title: "Latest Event: Influential Women of the Diaspora: YEP Women's Power Hour"
   url: https://yepnetwork.github.io/events/
   image: assets/images/events/2018-02-15-effective-comm.jpg
 - title: Meet the Team
