--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,5 +1,24 @@
 - name: Mimi Alemayehou
   position: Executive Advisor at The Blackstone Group
   image: mimi-alemayehou.png
+- name: Marcus Samuelsson
+  position:  Chef and Restaurateur
+  image: marcus-samuelsson.jpg
+- name: Dr. Mehret Mandefro
+  position: Physician, Anthropologist, Filmmaker.
+  image: mehret-mandefro.jpg
+- name: Yohannes Abraham
+  position:Senior Advisor at the Obama Foundation
+  image: yohannes-abraham.jpg
+- name: Dr Menna Demessie
+  position: Vice President of Policy and Research for the Congressional Black Caucus Foundation, Inc. (CBCF)
+  image: menna-demessie.jpg
+- name: Mawi Asgedom
+  position:Author and Motivational Public Speaker
+  image: mawi-asgedom.jpg
+- name: Dr Lekidelu Tadesse
+  position: Associate Professor and Assistant Dean for Assessment and Accreditation at Howard University
+  image: -lekidelu-tadesse.png
 - name: Yohannes Assefa
   position: Director, Agriculture and Agribusiness at USAID East Africa Trade & Investment Hub
+   image: yohannes-assefa.jpg
