--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -3,7 +3,7 @@
   image: mimi-alemayehou.png
 - name: Marcus Samuelsson
   position:  Chef and Restaurateur
-  image: marcus-samuelsson.jpg
+  image: marcus-samuelsson2.jpg
 - name: Dr. Mehret Mandefro
   position: Physician, Anthropologist, Filmmaker.
   image: mehret-mandefro.jpg
@@ -15,7 +15,7 @@
   image: menna-demessie.jpg
 - name: Mawi Asgedom
   position:Author and Motivational Public Speaker
-  image: mawi-asgedom.jpg
+  image: mawi asgedom.jpg
 - name: Dr Lekidelu Tadesse
   position: Associate Professor and Assistant Dean for Assessment and Accreditation at Howard University
   image: -lekidelu-tadesse.png
