--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -18,7 +18,7 @@
   image: mawi asgedom.jpg
 - name: Dr Lekidelu Tadesse
   position: Associate Professor and Assistant Dean for Assessment and Accreditation at Howard University
-  image: -lekidelu-tadesse.png
+  image: lekidelu-tadesse.png
 - name: Yohannes Assefa
   position: Director, Agriculture and Agribusiness at USAID East Africa Trade & Investment Hub
    image: yohannes-assefa.jpg
