--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -6,10 +6,10 @@
   image: marcus-samuelsson2.jpg
 - name: Dr. Mehret Mandefro
   position: Physician, Anthropologist, Filmmaker.
-  image: mehret-mandefro.jpg
+  image: vacant.jpg
 - name: Yohannes Abraham
   position:Senior Advisor at the Obama Foundation
-  image: yohannes-abraham.jpg
+  image: vacant.jpg
 - name: Dr Menna Demessie
   position: Vice President of Policy and Research for the Congressional Black Caucus Foundation, Inc. (CBCF)
   image: menna-demessie.jpg
