--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -12,6 +12,7 @@
   image: yohannes-abraham.png
 - name: Dr Menna Demessie
   position: Vice President of Policy and Research for the Congressional Black Caucus Foundation, Inc. (CBCF)
+  url: https://yepnetwork.github.io/diaspora-corner/menna-demessie/
   image: menna-demessie.jpg
 - name: Mawi Asgedom
   position: Author and Motivational Public Speaker
