--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,9 +1,12 @@
-- name: Mimi Alemayehou
-  position: Executive Advisor at The Blackstone Group
-  image: mimi-alemayehou.png
 - name: Marcus Samuelsson
   position: Chef and Restaurateur
   image: marcus-samuelsson.jpg
+- name: Mimi Alemayehou
+  position: Executive Advisor at The Blackstone Group
+  image: mimi-alemayehou.png
+- name: Mawi Asgedom
+  position: Author and Motivational Public Speaker
+  image: mawi-asgedom.jpg
 - name: Dr. Mehret Mandefro
   position: Physician, Anthropologist, Filmmaker.
   image: mehret-mandefro.jpg
@@ -14,15 +17,37 @@
   position: Vice President of Policy and Research for the Congressional Black Caucus Foundation, Inc. (CBCF)
   url: https://yepnetwork.github.io/diaspora-corner/menna-demessie/
   image: menna-demessie.jpg
-- name: Mawi Asgedom
-  position: Author and Motivational Public Speaker
-  image: mawi-asgedom.jpg
+- name: Thomas Debass
+  position: Acting Special Representative for Global Partnerships
+  image: thomas-debass.jpg
 - name: Dr Lekidelu Tadesse
   position: Associate Professor and Assistant Dean for Assessment and Accreditation at Howard University
   image: lekidelu-tadesse.jpg
 - name: Yohannes Assefa
   position: Director, Agriculture and Agribusiness at USAID East Africa Trade & Investment Hub
   image: yohannes-assefa.jpg
-- name: Thomas Debass
-  position: Acting Special Representative for Global Partnerships
-  image: thomas-debass.jpg
+- name: Yeshimebeth (Tutu) Belay
+  position: Entrepreneur and Founder of Ethiopian Yellow Pages
+  image: tutu-belay.jpg
+ - name: Noah Samara
+  position: Chief Executive Officer of Worldspace and The Founding Father of Satellite Radio
+  image: noah_samara.jpg
+  - name: Bofta Yimam
+  position: TV Anchor, Speaker, Coach and 2013 Emmy Award Winning Journalist
+  image: marcus-samuelsson.jpg
+  - name: Dr. Solomon Bililign
+  position:  Professor of Physics at North Carolina A&T State University and Recipient of the 2010 Presidential Award for Excellence in Science, Mathematics, and Engineering Mentoring
+  image: solomon-bililign.jpg
+  - name: Daniel Gad
+  position: Owner of Omega Farms
+  image: daniel-gad.jpg
+  - name: Tebabu Assefa
+  position: Owner of Blessed Coffee
+  image: tebabu-assefa.jpg
+  - name: Addis Alemayehou
+  position: Founder and Managing Director of 251 Communications, Founder of 105.3 Afro FM, and Board Member of Africa Leadership Network (ALN) and Ethiopian ICT Association
+  image: addis-alemayehou.jpg
+  - name: Messay Getahun
+  position: Film Maker and Producer
+  image: messay-getahun.jpg
+  
