--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -24,7 +24,7 @@
   position: Associate Professor and Assistant Dean for Assessment and Accreditation at Howard University
   image: lekidelu-tadesse.jpg
 - name: Yohannes Assefa
-  position: Director, Agriculture and Agribusiness at USAID East Africa Trade & Investment Hub
+  position: Director of Agriculture and Agribusiness at USAID East Africa Trade & Investment Hub
   image: yohannes-assefa.jpg
 - name: Yeshimebeth (Tutu) Belay
   position: Entrepreneur and Founder of Ethiopian Yellow Pages
