--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -34,7 +34,7 @@
   image: noah_samara.jpg
   - name: Bofta Yimam
   position: TV Anchor, Speaker, Coach and 2013 Emmy Award Winning Journalist
-  image: marcus-samuelsson.jpg
+  image: bofta-yimam.jpg
   - name: Dr. Solomon Bililign
   position:  Professor of Physics at North Carolina A&T State University and Recipient of the 2010 Presidential Award for Excellence in Science, Mathematics, and Engineering Mentoring
   image: solomon-bililign.jpg
