--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -26,7 +26,7 @@
 - name: Yohannes Assefa
   position: Director of Agriculture and Agribusiness at USAID East Africa Trade & Investment Hub
   image: yohannes-assefa.jpg
-- name: Yeshimebeth (Tutu) Belay
+- name: Yeshimebeth Tutu Belay
   position: Entrepreneur and Founder of Ethiopian Yellow Pages
   image: tutu-belay.jpg
  - name: Noah Samara
@@ -36,7 +36,7 @@
   position: TV Anchor, Speaker, Coach and 2013 Emmy Award Winning Journalist
   image: bofta-yimam.jpg
   - name: Dr. Solomon Bililign
-  position:  Professor of Physics at North Carolina A&T State University and Recipient of the 2010 Presidential Award for Excellence in Science, Mathematics, and Engineering Mentoring
+  position:  Professor of Physics at North Carolina A&T State University 
   image: solomon-bililign.jpg
   - name: Daniel Gad
   position: Owner of Omega Farms
@@ -45,9 +45,8 @@
   position: Owner of Blessed Coffee
   image: tebabu-assefa.jpg
   - name: Addis Alemayehou
-  position: Founder and Managing Director of 251 Communications, Founder of 105.3 Afro FM, and Board Member of Africa Leadership Network (ALN) and Ethiopian ICT Association
+  position: Founder and Managing Director of 251 Communications
   image: addis-alemayehou.jpg
   - name: Messay Getahun
   position: Film Maker and Producer
   image: messay-getahun.jpg
-  
