--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -3,7 +3,7 @@
   date: 'Thursday, March 22, 2018'
   url: '/events/'
   desc: 'YEP Presents "Influential Women of the Diaspora"'
-  image: assets/images/events/women_power_hour.png
+  image: assets/images/events/women-power-hour.JPG
 - title: 'Lorem Ipsum'
   date: 'Thursday, March 15, 2018'
   url: '/events/'
