--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,8 +1,8 @@
 # This is the hero on the front page. It will only show the first one.
-- title: 'Event: Influential Women of the Diaspora'
-  date: 'Thursday, March 22, 2018'
-  url: '/events/'
-  desc: 'YEP Presents "Influential Women of the Diaspora"'
+- title: 'YEP’s Business Idea Competition'
+  date: 'Application Deadline: Monday, April 30, 2018 '
+  url: 'https://goo.gl/xh64gB'
+  desc: 'YEP is happy to announce its 2nd Business Idea Competition.'
   image: assets/images/events/2018-03-22-women-power-hour.jpg
 - title: 'Lorem Ipsum'
   date: 'Thursday, March 15, 2018'
