--- a/_data/featured.yml
+++ b/_data/featured.yml
@@ -1,12 +1,12 @@
-- title: "Latest Event: Influential Women of the Diaspora: YEP Women's Power Hour"
-  url: https://yepnetwork.github.io/events/
+- title: "YEP's 2018 Business Idea Competition"
+  url: https://goo.gl/xh64gB 
   image: assets/images/events/2018-03-22-influential-women-diaspora.jpg
-- title: Meet the Team
-  url: /about/team/
-  image: assets/images/team.jpg
 - title: "Diaspora Story: Mignotae Kebede"
   url: /diaspora-corner/mignotae-kebede/
   image: assets/images/diaspora/mignotae-kebede-portrait.jpg
 - title: "Diaspora Story: Menna Demessie"
   url: /diaspora-corner/menna-demessie/
   image: assets/images/diaspora/menna-demessie-portrait.png
+  - title: Meet the YEP Team
+  url: /about/team/
+  image: assets/images/team.jpg
