--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ about:
     path: /about/team
 
 #  Programs section sub-nav.
-about:
+Programs:
   - title: Career Development
     class: career
     path: /program/a_career-development/
