--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -5,9 +5,9 @@
   url: 'https://yepnetwork.github.io/events/'
 - title: "Sharpen Your Skills"
   image: "assets/images/programs/personal-professional-empowerment.jpg"
-  url: 'https://yepnetwork.github.io/program/personal-professional-empowerment.html'
+  url: 'https://yepnetwork.github.io/program/personal-professional-empowerment/'
   description: Empower yourself through personal and professional development
 - title: "Become a Mentor/Mentee"
   image: "assets/images/programs/diaspora-engagement.jpg"
-  url: 'https://yepnetwork.github.io/program/professional-mentorship.html'
+  url: 'https://yepnetwork.github.io/program/professional-mentorship/'
   description: Participate in a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals .
