--- a/_data/past-team-members.yml
+++ b/_data/past-team-members.yml
@@ -10,9 +10,6 @@
 - name: Tadu Yimam
   position: Senior Director, Online Learning and Publications
   image: tadu-yimam.jpg
-- name: Teddy Tesfaye
-  position: Founder and Executive Vice Chair
-  image: teddy-tesfaye.jpg
 - name: Sabel Kassa
   position: Senior Business System Analyst at USAC
   image: sabel-kassa.jpg
@@ -21,10 +18,10 @@
   image: birhanu-abate.jpg
 - name: Anna Jemaneh
   position: Accounting Manager at Tempus, Inc
-  image: anna-jemaneh.jpg
+  image: vacant.jpg
 - name: Zewdu Beyen
   position: Patent Examiner at USPTO
-  image: zewdu-beyen.jpg
+  image: vacant.jpg
 - name: Solomon Garedew
   position: Business and System Integration Consultant at Accenture
   image: solomon-garedew.jpg
