--- a/_data/past-team-members.yml
+++ b/_data/past-team-members.yml
@@ -16,9 +16,9 @@
 - name: Birhanu Abate
   position: Director of Membership Services
   image: birhanu-abate.jpg
-- name: Anna Jemaneh
+- name: Anna Argaw
   position: Accounting Manager at Tempus, Inc
-  image: vacant.jpg
+  image: anna-argaw.png
 - name: Zewdu Beyen
   position: Patent Examiner at USPTO
   image: vacant.jpg
