--- a/_data/featured.yml
+++ b/_data/featured.yml
@@ -1,5 +1,5 @@
 - title: "YEP's 2018 Business Idea Competition"
-  url: https://goo.gl/xh64gB 
+  url: https://yepnetwork.github.io/business-idea/ 
   image: /assets/images/hero/business_idea_competition.jpg
 - title: "Diaspora Story: Mignotae Kebede"
   url: /diaspora-corner/mignotae-kebede/
