--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -5,9 +5,9 @@
   url: 'https://yepnetwork.github.io/events/'
 - title: "Sharpen Your Skills"
   image: "assets/images/programs/personal-professional-empowerment.jpg"
-  url: 'https://yepnetwork.github.io/program/personal-professional-empowerment/'
+  url: 'https://yepnetwork.github.io/programs/'
   description: Empower yourself through personal and professional development
-- title: "Become a Mentor/Mentee"
+- title: "Win a $1000 for your idea"
   image: "assets/images/programs/diaspora-engagement.jpg"
-  url: 'https://yepnetwork.github.io/program/professional-mentorship/'
-  description: Participate in a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals .
+  url: 'https://yepnetwork.github.io/business-idea/'
+  description: Participate in YEP’s Business Idea Competition in which Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community will present their business idea in front of media and hundreds of attendees.
