--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -6,8 +6,8 @@
 - title: "Sharpen Your Skills"
   image: "assets/images/programs/personal-professional-empowerment.jpg"
   url: 'https://yepnetwork.github.io/programs/'
-  description: Empower yourself through personal and professional development
+  description: Learn about the different programs that are available to you.
 - title: "Win a $1000 for your idea"
-  image: "assets/images/programs/diaspora-engagement.jpg"
+  image: "/assets/images/hero/business_idea_competition.jpg"
   url: 'https://yepnetwork.github.io/business-idea/'
   description: Participate in YEP’s Business Idea Competition in which Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community will present their business idea in front of media and hundreds of attendees.
