--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -1,13 +1,13 @@
 # These are list of items that are displayed under "Get Involved" on homepage.
 - title: "You’re Invited"
   image: "assets/images/programs/professional-mentorship.jpg"
-  description: Learn something new and network at our upcoming event
+  description: Learn something new and network at our upcoming event.
   url: 'https://yepnetwork.github.io/events/'
-- title: "Sharpen Your Skills"
+- title: "Be a Better You"
   image: "assets/images/programs/personal-professional-empowerment.jpg"
   url: 'https://yepnetwork.github.io/programs/'
-  description: Learn about the different programs that are available to you.
-- title: "Win a $1000 for your idea"
+  description: Learn about different programs that meet your needs and interests. 
+- title: "Win $1000"
   image: "/assets/images/hero/business_idea_competition.jpg"
   url: 'https://yepnetwork.github.io/business-idea/'
-  description: Participate in YEP’s Business Idea Competition in which Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community will present their business idea in front of media and hundreds of attendees.
+  description: Enter YEP's Business Idea Competition for a chance at a cash prize and valuable mentorship. 
