--- a/_data/team.yml
+++ b/_data/team.yml
@@ -22,6 +22,6 @@
 - name: Aster Gubay
   position: Diaspora Community Engagement Program Lead
   image: aster-gubay.jpg
-- name: Meron Ruga
+- name: Tigist Ruga
   position: Personal and Professional Development Program Lead
   image: meron-ruga.jpg
