--- a/_data/featured.yml
+++ b/_data/featured.yml
@@ -1,6 +1,6 @@
-- title: "YEP's 2018 Business Idea Competition"
-  url: https://yepnetwork.github.io/business-idea/ 
-  image: /assets/images/hero/business_idea_competition.jpg
+- title: "Last Month Event: YEP Women's Power Hour"
+  url: https://yepnetwork.github.io/events/ 
+  image: /assets/images/events/2018-03-22-women-power-hour.jpg
 - title: "Diaspora Story: Mignotae Kebede"
   url: /diaspora-corner/mignotae-kebede/
   image: assets/images/diaspora/mignotae-kebede-portrait.jpg
