--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -8,6 +8,6 @@
   url: 'https://yepnetwork.github.io/programs/'
   description: Learn about different programs that meet your needs and interests. 
 - title: "Win $1000"
-  image: "assets/images/hero/business_idea_competition_2.jpg"
+  image: "assets/images/hero/business_idea_competition_2.png"
   url: 'https://yepnetwork.github.io/business-idea/'
   description: Enter YEP's Business Idea Competition for a chance at a cash prize and valuable mentorship. 
