--- a/_data/team.yml
+++ b/_data/team.yml
@@ -25,3 +25,7 @@
 - name: Tigist Ruga
   position: Personal and Professional Development Program Lead
   image: meron-ruga.jpg
+- name: Manahat Thomas
+  position: Recent Arrivals Development Program Lead
+  image: meron-ruga.jpg
+
