--- a/_data/team.yml
+++ b/_data/team.yml
@@ -27,5 +27,5 @@
   image: meron-ruga.jpg
 - name: Manahat Thomas
   position: Recent Arrivals Development Program Lead
-  image: manahat-thomas.jpg
+  image: manahat_thomas.jpg
 
