--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -3,7 +3,7 @@
   date: 'EVENT DATE: Thursday, April 17, 2018'
   url: 'https://yepnetwork.github.io/events/'
   desc: 'Mental Health Awareness'
-  image: /assets/images/events/2018-03-22-influential-women-diaspora.jpg
+  image: /assets/images/events/staying_fit_mentally.png
 - title: 'Lorem Ipsum'
   date: 'Thursday, March 15, 2018'
   url: '/events/'
