--- a/_data/past-team-members.yml
+++ b/_data/past-team-members.yml
@@ -10,9 +10,15 @@
 - name: Tadu Yimam
   position: Senior Director, Online Learning and Publications
   image: tadu-yimam.jpg
+- name: Hiwot Maru
+  position: IT Professional
+  image: hiwot_maru.jpg
 - name: Sabel Kassa
   position: Senior Business System Analyst at USAC
   image: sabel-kassa.jpg
+- name: Lulit Beshah
+  position: Director of Center Operations, Income & Benefits Policy Center at The Urban Institute
+  image: lulit_beshah.jpg
 - name: Birhanu Abate
   position: Director of Membership Services
   image: birhanu-abate.jpg
@@ -22,6 +28,22 @@
 - name: Solomon Garedew
   position: Business and System Integration Consultant at Accenture
   image: solomon-garedew.jpg
-- name: Zewdu Beyen
-  position: Patent Examiner at USPTO
-  image: vacant.jpg
+- name: Hiwi Asfaw
+  position: Senior Grant Accountant at Mary's Center
+  image: hiwi_asfaw.jpg
+- name: Maraki Shimelis
+  position: PhD Candidate, Educational Leadership and Comparative & International Education
+  image: maraki_kebede.jpg
+- name: Ayalew Taye
+  position: Executive Assistant to the VP at the Georgetown University
+  image: ayalew_taye.jpg
+ 
+  
+  
+  
+  
+  
+
+  
+  
+
