--- a/_data/past-team-members.yml
+++ b/_data/past-team-members.yml
@@ -17,7 +17,7 @@
   position: Senior Business System Analyst at USAC
   image: sabel-kassa.jpg
 - name: Lulit Beshah
-  position: Director of Center Operations, Income & Benefits Policy Center at The Urban Institute
+  position: Senior Director Operations at The Urban Institute
   image: lulit_beshah.jpg
 - name: Birhanu Abate
   position: Director of Membership Services
