--- a/_data/featured.yml
+++ b/_data/featured.yml
@@ -1,6 +1,6 @@
-- title: "Last Month Event: YEP Women's Power Hour"
-  url: /events/
-  image: assets/images/hero/about_us_1.png
+- title: "Diaspora Story: Mignotae Kebede"
+  url: /diaspora-corner/helen-mesfin
+  image: assets/images/diaspora/helen-mesfin-portrait.jpg
 - title: "Diaspora Story: Mignotae Kebede"
   url: /diaspora-corner/mignotae-kebede/
   image: assets/images/diaspora/mignotae-kebede-portrait.jpg
