--- a/_data/featured.yml
+++ b/_data/featured.yml
@@ -1,4 +1,4 @@
-- title: "Diaspora Story: Mignotae Kebede"
+- title: "Diaspora Story: Helen Mesfin"
   url: /diaspora-corner/helen-mesfin
   image: assets/images/diaspora/helen-mesfin-portrait.jpg
 - title: "Diaspora Story: Mignotae Kebede"
