--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,7 +1,7 @@
 # This is the hero on the front page. It will only show the first one.
 - title: 'Diaspora Corner'
   date: 'Diaspora Highlight: Helen Mesfin'
-  url: 'diaspora-corner/'
+  url: 'diaspora-corner/helen-mesfin/'
   desc: 'Diaspora Corner is a blog where we highlight the accomplishments and perspectives of movers and shakers of the the diaspora.Read their stories and get your dose of inspiration.'
   image: /assets/images/diaspora/helen-mesfin-portrait.jpg
 - title: 'Lorem Ipsum'
