--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -40,6 +40,9 @@
 - name: Daniel Gad
   position: Owner of Omega Farms
   image: daniel-gad.jpg
+- name: Helen Mesfin
+  position: Producer and Host of Helen Show at EBS
+  image: helen-mesfin.jpg
 - name: Tebabu Assefa
   position: Owner of Blessed Coffee
   image: tebabu-assefa.jpg
