--- a/_data/featured.yml
+++ b/_data/featured.yml
@@ -1,3 +1,6 @@
+- title: "Diaspora Story: Mimi Alemayehou"
+  url: /diaspora-corner/mimi-alemayehou
+  image: assets/images/diaspora/mimi-alemayehou.jpg
 - title: "Diaspora Story: Helen Mesfin"
   url: /diaspora-corner/helen-mesfin
   image: assets/images/diaspora/helen-mesfin-portrait.jpg
