--- a/_data/featured.yml
+++ b/_data/featured.yml
@@ -1,3 +1,9 @@
+- title: "Diaspora Story: Mimi Alemayehou"
+  url: /diaspora-corner/mimi-alemayehou/
+  image: assets/images/diaspora/mimi-alemayehou-portrait.jpg
+- title: "Diaspora Story: Helen Mesfin"
+  url: /diaspora-corner/helen-mesfin/
+  image: assets/images/diaspora/helen-mesfin-portrait.jpg
 - title: "Diaspora Story: Mignotae Kebede"
   url: /diaspora-corner/mignotae-kebede/
   image: assets/images/diaspora/mignotae-kebede-portrait.jpg
