--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,9 +1,9 @@
 # This is the hero on the front page. It will only show the first one.
 - title: 'Diaspora Corner'
-  date: 'Diaspora Highlight: Helen Mesfin'
-  url: 'diaspora-corner/helen-mesfin/'
+  date: 'Diaspora Highlight: Mimi Alemayehou'
+  url: 'diaspora-corner/mimi-alemayehou/'
   desc: 'Diaspora Corner is a blog where we highlight the accomplishments and perspectives of movers and shakers of the the diaspora.Read their stories and get your dose of inspiration.'
-  image: /assets/images/diaspora/helen-mesfin-portrait.jpg
+  image: /assets/images/diaspora/mimi-alemayehou-portrait.jpg
 - title: 'YEP Open Mic and Happy Hour'
   date: 'THURSDAY, June 28, 2018 @ 5:30 PM'
   url: '/events/'
