--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,4 +1,9 @@
 # This is the hero on the front page. It will only show the first one.
+- title: 'YEP Eight Year Anniversary Gala: '
+  date: 'Saturday, November 10, 2018 at 6:00 PM'
+  url:   https://www.eventbrite.com/e/yep-eight-year-anniversary-gala-tickets-50021556823
+  desc:  'The power of change: Building Tomorrow Through Innovation, Creativity and Leadership.'
+  image: https://cdn.evbuc.com/eventlogos/26301227/yep8thanniversarygala28229.png
 - title: 'Diaspora Corner'
   date: 'Diaspora Highlight: Mimi Alemayehou'
   url: 'diaspora-corner/mimi-alemayehou/'
