--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -3,7 +3,7 @@
   date: 'Saturday, November 10, 2018 at 6:00 PM'
   url:   https://www.eventbrite.com/e/yep-eight-year-anniversary-gala-tickets-50021556823
   desc:  'The power of change: Building Tomorrow Through Innovation, Creativity and Leadership.'
-  image: https://cdn.evbuc.com/eventlogos/26301227/yep8thanniversarygala28229.png
+  image: /assets/images/events/yep_gala_2018.png
 - title: 'Diaspora Corner'
   date: 'Diaspora Highlight: Mimi Alemayehou'
   url: 'diaspora-corner/mimi-alemayehou/'
