--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -7,7 +7,7 @@
   image: "assets/images/programs/personal-professional-empowerment.jpg"
   url: '/programs/'
   description: Learn about different programs that meet your needs and interests. 
-- title: "Win $1000"
+- title: "Volunteer and Join YEP Team Member"
   image: "assets/images/hero/business_idea_competition_2.png"
-  url: '/business-idea/'
-  description: Enter YEP's Business Idea Competition for a chance at a cash prize and valuable mentorship. 
+  url: '/Volunteer/'   
+  description: If you’ve got the desire to be a part of a creative, amazing and innovative group of professionals in a fun and rewarding environment, then we invite you to join our team. 
