--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -7,7 +7,7 @@
   image: "assets/images/programs/personal-professional-empowerment.jpg"
   url: '/programs/'
   description: Learn about different programs that meet your needs and interests. 
-- title: "Volunteer and Join YEP Team Member"
-  image: "assets/images/hero/business_idea_competition_2.png"
+- title: "Volunteer with YEP"
+  image: "assets/images/hero/join-our-team.png"
   url: '/Volunteer/'   
   description: If you’ve got the desire to be a part of a creative, amazing and innovative group of professionals in a fun and rewarding environment, then we invite you to join our team. 
