--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -10,4 +10,4 @@
 - title: "Volunteer with YEP"
   image: "assets/images/hero/join-our-team.png"
   url: '/Volunteer/'   
-  description: If you’ve got the desire to be a part of a creative amazing and innovative group of professionals in a fun and rewarding environment, then we invite you to join our team. 
+  description: If you’ve got the desire to be a part of a creative, amazing and innovative group of professionals in a fun and rewarding environment, then we invite you to join our team. 
