--- a/_data/calls.yml
+++ b/_data/calls.yml
@@ -9,5 +9,5 @@
   description: Learn about different programs that meet your needs and interests. 
 - title: "Volunteer with YEP"
   image: "assets/images/hero/join-our-team.png"
-  url: '/volunteer/'  volunteer 
+  url: '/volunteer/'
   description: If you’ve got the desire to be a part of a creative, amazing and innovative group of professionals in a fun and rewarding environment, then we invite you to join our team. 
